HTML will always be changing

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <!-- <script src="console.js"></script> -->
     <!-- <script src="variables.js"></script> -->
     <!-- <script src="DataTypes.js"></script> -->
-    <script src="typeConvertion.js"></script>
+    <!-- <script src="typeConvertion.js"></script> -->
+    
 </body>
 
 </html>
