New JS file and updates in HTML

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- <script src="variables.js"></script> -->
     <!-- <script src="DataTypes.js"></script> -->
     <!-- <script src="typeConvertion.js"></script> -->
-    
+    <script src="arithmetic.js"></script>
 </body>
 
 </html>
