More JS and updated HTML

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <!-- <script src="variables.js"></script> -->
     <!-- <script src="DataTypes.js"></script> -->
     <!-- <script src="typeConvertion.js"></script> -->
-    <script src="arithmetic.js"></script>
+    <!-- <script src="arithmetic.js"></script> -->
+    <script src="mathObject.js"></script>
 </body>
 
 </html>
