More JS and updated HTML

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <!-- <script src="DataTypes.js"></script> -->
     <!-- <script src="typeConvertion.js"></script> -->
     <!-- <script src="arithmetic.js"></script> -->
-    <script src="mathObject.js"></script>
+    <!-- <script src="mathObject.js"></script> -->
+    <!-- <script src="concatination_append.js"></script> -->
 </body>
 
 </html>
