--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <!-- <script src="arithmetic.js"></script> -->
     <!-- <script src="mathObject.js"></script> -->
     <!-- <script src="concatination_append.js"></script> -->
+    <!-- <script src="interpolation.js"></script> -->
 </body>
 
 </html>
