--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         qui cumque numquam sint blanditiis quisquam quia!
     </p>
 
-    <!-- uncomment these to see the effects on console -->
+    <!-- uncomment these to see the effects on console one by one -->
 
     <!-- <script src="console.js"></script> -->
     <!-- <script src="variables.js"></script> -->
@@ -32,6 +32,7 @@
     <!-- <script src="mathObject.js"></script> -->
     <!-- <script src="concatination_append.js"></script> -->
     <!-- <script src="interpolation.js"></script> -->
+    <script src="comparisonOperator.js"></script>
 </body>
 
 </html>
